Optimize semantic highlighting performance and cleanup
Cache EGaml.getInstance() and reuse it to avoid repeated lookups, initialize the done set with a capacity, and replace ASSIGNMENTS with an immutable Set.of to reduce allocations. Remove DEBUG-related imports and stray debug block. Simplify and harden setStyle/equalsFacetOrString logic with early returns and clearer null checks, fix edge cases for short tokens, and use pattern-matching instanceof where appropriate. General refactor for readability and small performance improvements.